--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="tip_amount">$0.00</string>
 
     <string name="total_amount_label">Total</string>
-    <string name="total_amount">$0.00</string>    
+    <string name="total_amount">$0.00</string>
+    <string name="buttonSaveTip">Save Tip</string>
 </resources>
